<resources>
    <string name="app_name">Glaid</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="sign_up_image">sign Up Image</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="let_s_get_you_signed_in_your_diesel_awaits_you">Let’s get you signed in, your diesel awaits you</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="i_know_my_email">I know my email</string>
    <string name="i_know_my_phone_number">I know my phone number</string>
    <string name="title_activity_maps">Map</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="payment">Payment</string>
    <string name="order_history">Order History</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="get_started_button">get started button</string>
    <string name="liters">liters</string>
    <string name="chat_user_name">Chat With %1$s</string>
    <string name="type_a_message">Type a message</string>
    <string name="chat_with_dafom">Chat With Dafom</string>
    <string name="dot">•</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_agreement">By signing up you agree to our</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="phone_number_input_label">Phone Number</string>
    <string name="home_address_input_label">Home Address</string>
    <string name="full_name_input_label">Full Name</string>
    <string name="sign_up_intro_text">Let’s get you signed up so you can begin ordering your diesel</string>
    <string name="sign_up_intro_title">Hi There!</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Password</string>
    <string name="verify_password_input_label">Re-enter Password</string>
    <string name="register_button_label">Continue</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_invalid">Password must contain at least one number</string>
    <string name="field_empty">Cannot be empty</string>
    <string name="invalid_format">Invalid format</string>
    <string name="did_not_receive_otp">Did not receive an OTP?</string>
    <string name="resend">Resend</string>
    <string name="otp_input_label">OTP</string>
    <string name="complete_registration_intro_text">A one-time pin has been sent to your phone number. Please enter it below</string>
    <string name="complete_registration_intro_title">One Last Step</string>
    <string name="complete_registration_intro_image">intro image</string>
    <string name="continue_text">Continue</string>
    <string name="forgot_password_intro_text">If you cannot remember your password, we can help. To get started, choose an option below</string>
    <string name="forgot_password_intro_title">Forgot password</string>
    <string name="reset_password_intro_text">Please enter the %1$s associated with your account below</string>
    <string name="get_otp_button_label">Send otp</string>
    <string name="complete_reset_password_btn_label">Continue</string>
    <string name="otp_reset_intro_title">Forgot Password</string>
    <string name="otp_reset_intro_text">Please enter the %1$s associated with your account below</string>
    <string name="reset_password_btn_label">Reset</string>
    <string name="set_reset_password_intro_text">Enter your new password below</string>
    <string name="set_reset_password_intro_title">Reset Password</string>
    <string name="todo">TODO</string>
    <string name="location_time"><![CDATA[Location & Time]]></string>
    <string name="rate_customer">Rate Customer</string>
    <string name="delivered">Delivered</string>
    <string name="order_details">Order Details</string>
    <string name="top_questions">Top Questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="cached_authentication">cached_authentication</string>
    <string name="sh_authorization">authorization</string>
    <string name="gas_button_label">Gas</string>
    <string name="diesel_button_label">Diesel</string>
    <string name="custom_quantity_button_label">Enter custom quantity</string>
    <string name="home_greeting_intro_text">Hello %1$s</string>
    <string name="home_intro_text">What product will you like to order?</string>
    <string name="home_intro_image">home_intro_image</string>
    <string name="chevron_right">gas_type_button_img</string>
    <string name="pump_img">pump_image</string>
    <string name="order_now_btn_label">Order now</string>
    <string name="schedule_order_btn_label">Schedule order for later</string>
    <string name="edit_profile_btn_label">Edit Profile</string>
    <string name="done">Done</string>
    <string name="payment_schedule_business_only">Payment Schedule (Business Only)</string>
    <string name="pay_on_delivery">Pay on Delivery</string>
    <string name="schudule_payment_for_later">Schudule payment for later</string>
    <string name="set_payment_date_and_time">Set Payment date and time</string>
    <string name="sign_out_btn_label">Sign Out</string>
    <string name="sidebar_background_icon">sidebar_background_icon</string>
    <string name="formatted_quantity">%1$.1f %2$s</string>
    <string name="formatted_amount">&#8358;%1$s</string>
    <string name="predefined_address_type">%1$s</string>
    <string name="location">Location</string>
    <string name="add_home">Add Home</string>
    <string name="choose_another_payment_option">Choose another payment option</string>
    <string name="sh_user_details">userDetails</string>
    <string name="sh_wallet">wallet</string>
    <string name="sh_payment_cards">cards</string>
    <string name="sh_preferred_payment">preferred_payment</string>
    <string name="sh_home_address">home_address</string>
    <string name="sh_business_address">business_address</string>
    <string name="sh_pending_order">pending_order</string>
    <string name="sh_orders">orders</string>
    <string name="sh_gas_type">gas type</string>
    <string name="glaid_wallet">Glaid Wallet</string>
    <string name="preferred_payment_method">Preferred payment Method</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="add_funds">ADD Funds</string>
    <string name="wallet">&#8358;00.00</string>
    <string name="cash">Cash</string>
    <string name="amount">Amount</string>
    <string name="no_card_added">No card added</string>
    <string name="payment_type">Payment type</string>
    <string name="get_1000_when_you_invite_your_friends_to_use_glaid_using_your_special_invite_code_below">Get ₦1000 when you invite your friends to use Glaid using your special invite code below</string>
    <string name="back_btn">back_btn</string>
    <string name="add_card_title">Add Card</string>
    <string name="card_exp_date_hint">mm/yy</string>
    <string name="card_exp_date_input_label">Expiry date</string>
    <string name="card_number_input_label">Card Number</string>
    <string name="payment_type_img">payment_type_img</string>
    <string name="cvv_input_label">CVV</string>
    <string name="add_card_btn_label">Add Card</string>
    <string name="internet_error_msg">Please check your internet</string>
    <string name="error_occurred">An error occurred, please try again later</string>
    <string name="api_error_msg">An error occurred</string>
    <string name="wallet_title">Glaid wallet</string>
    <string name="add_funds_btn_label">Add Funds</string>
    <string name="wallet_icon">wallet icon</string>
    <string name="wallet_background">wallet_background</string>
    <string name="credit_card_icon">Credit card icon</string>
    <string name="amount_input_label">Amount (&#8358;)</string>
    <string name="processing">Processing</string>
    <string name="share_to_whatsapp">Share to Whatsapp</string>
    <string name="lekki_phase_1_lagos">Lekki Phase 1, Lagos</string>
    <string name="click_to_close">Click here to close</string>
    <string name="add_funds_title">Add Funds</string>
    <string name="card_no">***** %1$s</string>
    <string name="card_no_input">Card (***** %1$s)</string>
    <string name="exp_date">%1$s/%2$s</string>
    <string name="delete">Delete</string>
    <string name="work_address">Work Address</string>
    <string name="work_address_input_label">Work Address</string>
    <string name="menu_btn_icon">menu button icon</string>
    <string name="user_location_btn_icon">userLocationBtnIcon</string>
    <string name="location_icon">location_icon</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="date_format">%1$s/%2$s/%3$s %4$s:%5$s</string>
    <string name="quantity">Quantity</string>
    <string name="delivery_type">Delivery type</string>
    <string name="pending_order_message">Taking order......</string>
    <string name="driver_order_message">Driver assigned</string>
    <string name="driver_on_the_way_message">Your order is on it\'s way</string>
    <string name="telephone_icon">telephone icon</string>
    <string name="call_driver">Call Driver</string>
    <string name="profile_image_placeholder">profile_image_placeholder</string>
    <string name="order_driver_name">Your driver is %1$s</string>
    <string name="from_the_nearest_fuel_station">From the nearest fuel station</string>
    <string name="fs_user_locations">User Locations</string>
    <string name="fs_pending_orders">Pending Orders</string>
    <string name="fs_pending_orders_driver_id">driverId</string>
    <string name="fs_pending_orders_status">status</string>
    <string name="fs_chat_rooms">Chat Rooms</string>
    <string name="fs_messages">messages</string>
    <string name="fs_order_messages">Order Messages</string>
    <string name="fs_support_messages">Support Messages</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="diesel">Diesel</string>
    <string name="_10_liters">10 Liters</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="billed_to">Billed to</string>
    <string name="trip_start_soon">Driver will soon start trip</string>
    <string name="text_driver">Text Driver</string>
    <string name="cached_data">cached_data</string>
    <string name="order_details_driver_name" >Your driver was %1$s</string>
    <string name="order_details_driver_not_assigned" >Waiting for driver to be assigned</string>
    <string name="please_rate_your_driver">Please rate your driver</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="order_number">Order number: %1$s</string>
    <string name="order_date">12:30 AM</string>
    <string name="total">Total</string>
    <string name="view_receipt">View Receipt</string>
    <string name="status">Status</string>
    <string name="start_a_live_chat">Start a live chat</string>
    <string name="or">OR</string>
    <string name="gas_price_text">%1$s: &#8358;%2$.2f/%3$s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_image">profile image</string>
    <string name="server_client_id">399800857143-gb4705t084ca39sqko66bs3bogtbf2pt.apps.googleusercontent.com</string>
</resources>