<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingHorizontal="24dp"
    tools:context=".AddCardActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/addCardTitle"
        app:layout_constraintBottom_toBottomOf="@id/addCardTitle"
        android:src="@drawable/ic_back_btn"
        android:contentDescription="@string/back_btn" />

    <TextView
        android:id="@+id/addCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_title"
        android:textSize="24sp"
        android:textColor="#101010"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/paymentTypeImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paymentTypeImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintDimensionRatio="H, 23:9"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardTitle"
        app:srcCompat="@drawable/payment_options"
        android:contentDescription="@string/payment_type_img" />

    <LinearLayout
        android:id="@+id/cardNumberInputCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/paymentTypeImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/card_number_input_label" />

        <EditText
            android:id="@+id/cardNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_btn_drawable"
            android:ems="10"
            android:hint="@string/card_number_input_label"
            android:autofillHints="@string/card_number_input_label"
            android:inputType="number"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expDateInputCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberInputCover" >

        <TextView
            android:id="@+id/expDateInputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/card_exp_date_input_label" />

        <EditText
            android:id="@+id/expDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_btn_drawable"
            android:ems="10"
            android:hint="@string/card_exp_date_hint"
            android:autofillHints="@string/card_exp_date_hint"
            android:inputType="date"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cvvInputCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expDateInputCover" >

        <TextView
            android:id="@+id/cvvInputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cvv_input_label" />

        <EditText
            android:id="@+id/cvvInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_btn_drawable"
            android:ems="10"
            android:hint="@string/cvv_input_label"
            android:autofillHints="@string/cvv_input_label"
            android:inputType="number"
            android:padding="20dp" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#D5D5D5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvInputCover" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addCardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="17dp"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/mail_button_drawable">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_card_btn_label"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gasBtnImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/gasBtnImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/chevron_right"
            android:src="@drawable/chevronright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W, 1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/loading" />
    <include layout="@layout/error_message" />

</androidx.constraintlayout.widget.ConstraintLayout>