<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/fragment_btn_drawable"
    android:id="@+id/predefinedQCover" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="17dp">

        <ImageView
            android:id="@+id/predefinedImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="W, 1"
            android:src="@drawable/pump"
            android:contentDescription="@string/pump_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/predefinedImg"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/formatted_quantity"
                android:textColor="#252525"/>

            <TextView
                android:id="@+id/addressTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predefined_address_type"/>

        </LinearLayout>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/formatted_amount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#B7673AB7"
            android:gravity="top|center_vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80FFFFFF"/>
</LinearLayout>