<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:background="#F7F7F7">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paymentTitleCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="goBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/paymentTitle"
            app:layout_constraintBottom_toBottomOf="@id/paymentTitle"
            android:src="@drawable/ic_back_btn"
            android:contentDescription="@string/back_btn" />

        <TextView
            android:id="@+id/paymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card_title"
            android:textSize="24sp"
            android:textColor="#101010"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/walletTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/wallet_title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTitleCover" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/walletCover"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletTitle">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/payment"
            app:layout_constraintDimensionRatio="H, 1.2"
            android:contentDescription="@string/wallet_background" />

        <LinearLayout
            android:id="@+id/walletTitleCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/wallet_balance"
                android:textSize="15sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/walletAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/formatted_amount"
                android:textColor="#9B72B3"
                android:textSize="35sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addFundsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="17dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:onClick="addFundsBtnOnClick"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/mail_button_drawable">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_funds_btn_label"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fundsBtnImg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/fundsBtnImg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/wallet_icon"
                    android:src="@drawable/wallet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="W, 1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/preferredPaymentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/preferred_payment_method"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletCover" />

    <ScrollView
        android:id="@+id/preferredPaymentListCover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredPaymentTitle"
        app:layout_constraintBottom_toTopOf="@+id/emptyView">

        <LinearLayout
            android:id="@+id/preferredPaymentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="5dp"
            android:background="#FFFFFF">


        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferredPaymentListCover"
        app:layout_constraintBottom_toTopOf="@+id/addCardBtn"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addCardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="17dp"
        android:paddingHorizontal="15dp"
        android:onClick="addCardClick"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_card_btn_label"
            android:textSize="18sp"
            android:paddingHorizontal="24dp"
            android:textColor="@color/AppPrimaryPurple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/creditCardIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/creditCardIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/credit_card_icon"
            android:src="@drawable/credit_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W, 1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/loading" />
    <include layout="@layout/error_message" />
</androidx.constraintlayout.widget.ConstraintLayout>